--- a/PANCANCER06_summary_results_validation_samples.ipynb
+++ b/PANCANCER06_summary_results_validation_samples.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Countdf existst, reading in from /media/hieunguyen/GSHD_HN01/outdir/TMD450_TCGA_data_analysis/20240910/PANCANCER05_output/all_count.csv ...\n"
+      "100%|██████████| 1098/1098 [00:05<00:00, 210.16it/s]\n"
      ]
     }
    ],
@@ -56,7 +56,18 @@
     "all_read_files = [item for item in pathlib.Path(path_to_05_output).glob(\"*.read_classification.csv\")]\n",
     "\n",
     "##### read countdf: raw count and in-read count number. \n",
-    "countdf = pd.read_csv(os.path.join(path_to_05_output, \"all_count.csv\"), index_col = [0])\n",
+    "all_read_files = [item for item in pathlib.Path(path_to_05_output).glob(\"*.read_classification.csv\")]\n",
+    "if os.path.isfile(os.path.join(path_to_06_output, \"all_count.csv\")) == False:\n",
+    "    all_count_files = [item for item in pathlib.Path(path_to_05_output).glob(\"*.read_count.csv\")]\n",
+    "    countdf = pd.DataFrame()\n",
+    "    for file in tqdm(all_count_files):\n",
+    "        tmpdf = pd.read_csv(file, index_col = [0])\n",
+    "        tmpdf[\"SampleID\"] = tmpdf[\"SampleID\"].apply(lambda x: x.replace(\".read_classification.csv\", \"\"))\n",
+    "        countdf = pd.concat([countdf, tmpdf], axis = 0)\n",
+    "    countdf.to_csv(os.path.join(path_to_06_output, \"all_count.csv\"))\n",
+    "else:\n",
+    "     countdf = pd.read_csv(os.path.join(path_to_06_output, \"all_count.csv\"), index_col = [0])\n",
+    "#### read countdf: raw count and in-read count number. \n",
     "\n",
     "all_samples = []\n",
     "all_mean_candi_reads = []\n",
@@ -71,184 +82,6 @@
     "candidf[\"ratio_raw\"] = candidf[\"num_candi_reads\"] / candidf[\"raw_count\"]\n",
     "candidf[\"ratio_in_reads\"] = candidf[\"num_candi_reads\"] / candidf[\"in_read_count\"]\n",
     "candidf.to_excel(os.path.join(path_to_06_output, \"candi_reads_all_{}_vs_control.xlsx\".format(\"PAN_CANCER\")), index = False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SampleID</th>\n",
-       "      <th>num_candi_reads</th>\n",
-       "      <th>raw_count</th>\n",
-       "      <th>in_read_count</th>\n",
-       "      <th>ratio_raw</th>\n",
-       "      <th>ratio_in_reads</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>K4AA24</td>\n",
-       "      <td>11.770349</td>\n",
-       "      <td>18266</td>\n",
-       "      <td>18266</td>\n",
-       "      <td>0.000644</td>\n",
-       "      <td>0.000644</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MB170</td>\n",
-       "      <td>1.884106</td>\n",
-       "      <td>2846</td>\n",
-       "      <td>2846</td>\n",
-       "      <td>0.000662</td>\n",
-       "      <td>0.000662</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MH020</td>\n",
-       "      <td>167.294798</td>\n",
-       "      <td>178192</td>\n",
-       "      <td>178192</td>\n",
-       "      <td>0.000939</td>\n",
-       "      <td>0.000939</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>MB070</td>\n",
-       "      <td>6.276471</td>\n",
-       "      <td>10629</td>\n",
-       "      <td>10629</td>\n",
-       "      <td>0.000591</td>\n",
-       "      <td>0.000591</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MB119</td>\n",
-       "      <td>8.748521</td>\n",
-       "      <td>12680</td>\n",
-       "      <td>12680</td>\n",
-       "      <td>0.000690</td>\n",
-       "      <td>0.000690</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1093</th>\n",
-       "      <td>K0AAAF83</td>\n",
-       "      <td>10.617647</td>\n",
-       "      <td>17170</td>\n",
-       "      <td>17170</td>\n",
-       "      <td>0.000618</td>\n",
-       "      <td>0.000618</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1094</th>\n",
-       "      <td>MH054</td>\n",
-       "      <td>35.301170</td>\n",
-       "      <td>39982</td>\n",
-       "      <td>39982</td>\n",
-       "      <td>0.000883</td>\n",
-       "      <td>0.000883</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1095</th>\n",
-       "      <td>K0AAAF88R1</td>\n",
-       "      <td>5.940828</td>\n",
-       "      <td>9168</td>\n",
-       "      <td>9168</td>\n",
-       "      <td>0.000648</td>\n",
-       "      <td>0.000648</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1096</th>\n",
-       "      <td>MB079</td>\n",
-       "      <td>67.538905</td>\n",
-       "      <td>112334</td>\n",
-       "      <td>112334</td>\n",
-       "      <td>0.000601</td>\n",
-       "      <td>0.000601</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1097</th>\n",
-       "      <td>K0CAAA24</td>\n",
-       "      <td>3.952703</td>\n",
-       "      <td>5742</td>\n",
-       "      <td>5742</td>\n",
-       "      <td>0.000688</td>\n",
-       "      <td>0.000688</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1098 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        SampleID  num_candi_reads  raw_count  in_read_count  ratio_raw  \\\n",
-       "0         K4AA24        11.770349      18266          18266   0.000644   \n",
-       "1          MB170         1.884106       2846           2846   0.000662   \n",
-       "2          MH020       167.294798     178192         178192   0.000939   \n",
-       "3          MB070         6.276471      10629          10629   0.000591   \n",
-       "4          MB119         8.748521      12680          12680   0.000690   \n",
-       "...          ...              ...        ...            ...        ...   \n",
-       "1093    K0AAAF83        10.617647      17170          17170   0.000618   \n",
-       "1094       MH054        35.301170      39982          39982   0.000883   \n",
-       "1095  K0AAAF88R1         5.940828       9168           9168   0.000648   \n",
-       "1096       MB079        67.538905     112334         112334   0.000601   \n",
-       "1097    K0CAAA24         3.952703       5742           5742   0.000688   \n",
-       "\n",
-       "      ratio_in_reads  \n",
-       "0           0.000644  \n",
-       "1           0.000662  \n",
-       "2           0.000939  \n",
-       "3           0.000591  \n",
-       "4           0.000690  \n",
-       "...              ...  \n",
-       "1093        0.000618  \n",
-       "1094        0.000883  \n",
-       "1095        0.000648  \n",
-       "1096        0.000601  \n",
-       "1097        0.000688  \n",
-       "\n",
-       "[1098 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "candidf"
    ]
   }
  ],
