--- a/PANCANCER08_spike_in_TF_prediction.ipynb
+++ b/PANCANCER08_spike_in_TF_prediction.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4956/4956 [00:08<00:00, 571.26it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -66,7 +58,7 @@
     "        countdf = pd.concat([countdf, tmpdf], axis = 0)\n",
     "    countdf.to_csv(os.path.join(path_to_08_output, \"all_count.csv\"))\n",
     "else:\n",
-    "     countdf = pd.read_csv(os.path.join(path_to_08_output, \"all_count.csv\"), index_col = [0])\n",
+    "    countdf = pd.read_csv(os.path.join(path_to_08_output, \"all_count.csv\"), index_col = [0])\n",
     "#### read countdf: raw count and in-read count number. \n",
     "\n",
     "all_samples = []\n",
@@ -86,9 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ratio_raw\n",
+      "ratio_in_reads\n"
+     ]
+    }
+   ],
    "source": [
     "candidf = pd.read_excel(os.path.join(path_to_08_output, \"candi_reads_all_{}_vs_control.xlsx\".format(\"PAN_CANCER\")))\n",
     "convert_ratio = {\n",
@@ -114,9 +115,13 @@
     "\n",
     "# selected_candi_features = \"ratio_raw\"\n",
     "for selected_candi_features in [\"ratio_raw\", \"ratio_in_reads\"]:\n",
+    "    print(selected_candi_features)\n",
     "    all_models = dict()\n",
-    "    selected_candi_features = \"ratio_raw\"\n",
     "    path_to_save_models = os.path.join(path_to_02_tf_output, \"output\", input_cancer_class, selected_candi_features, \"models\")\n",
+    "\n",
+    "    lr_grid = pickle.load(open(os.path.join(path_to_save_models, \"LR.pkl\"), \"rb\"))\n",
+    "    all_models[\"LR\"] = lr_grid\n",
+    "\n",
     "\n",
     "    ridge_grid = pickle.load(open(os.path.join(path_to_save_models, \"Ridge.pkl\"), \"rb\"))\n",
     "    all_models[\"Ridge\"] = ridge_grid\n",
