--- a/14_summary_results_validations_ViTruong.ipynb
+++ b/14_summary_results_validations_ViTruong.ipynb
@@ -70,6 +70,26 @@
     "\n",
     "        \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1098, 3)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countdf.shape"
+   ]
   }
  ],
  "metadata": {
