--- a/PANCANCER08_spike_in_TF_prediction.ipynb
+++ b/PANCANCER08_spike_in_TF_prediction.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -134,6 +134,245 @@
     "        inputdf = candidf[input_features].copy()\n",
     "        candidf[\"predicted_TF\"] = all_models[i].predict(inputdf.to_numpy())\n",
     "        candidf.to_excel(os.path.join(path_to_08_output, f\"Prediction_{selected_candi_features}_model_{i}_spike_in_data.xlsx\"), index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SampleID</th>\n",
+       "      <th>num_candi_reads</th>\n",
+       "      <th>raw_count</th>\n",
+       "      <th>in_read_count</th>\n",
+       "      <th>ratio_raw</th>\n",
+       "      <th>ratio_in_reads</th>\n",
+       "      <th>ichorCNA</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>spike_in_ratio</th>\n",
+       "      <th>predicted_TF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KZAZ52_spike_in__005_from_ZNC05S_label_CRC_rep...</td>\n",
+       "      <td>3.232628</td>\n",
+       "      <td>15440</td>\n",
+       "      <td>7262</td>\n",
+       "      <td>0.000209</td>\n",
+       "      <td>0.000445</td>\n",
+       "      <td>0.04019</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.051048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KACE35_spike_in__005_from_ZNB06SR3_label_Breas...</td>\n",
+       "      <td>4.220238</td>\n",
+       "      <td>20069</td>\n",
+       "      <td>9720</td>\n",
+       "      <td>0.000210</td>\n",
+       "      <td>0.000434</td>\n",
+       "      <td>0.04465</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.052930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>K2AA15_spike_in__0005_from_ZNC03S_label_CRC_re...</td>\n",
+       "      <td>6.283626</td>\n",
+       "      <td>29715</td>\n",
+       "      <td>15085</td>\n",
+       "      <td>0.000211</td>\n",
+       "      <td>0.000417</td>\n",
+       "      <td>0.03432</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>0.048571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>K0AC37_spike_in__0001_from_ZNL08S_label_Lung_r...</td>\n",
+       "      <td>4.672566</td>\n",
+       "      <td>19961</td>\n",
+       "      <td>10139</td>\n",
+       "      <td>0.000234</td>\n",
+       "      <td>0.000461</td>\n",
+       "      <td>0.04623</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.053596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LBGS087_spike_in__01_from_ZNL15S_label_Lung_re...</td>\n",
+       "      <td>15.511696</td>\n",
+       "      <td>70788</td>\n",
+       "      <td>36730</td>\n",
+       "      <td>0.000219</td>\n",
+       "      <td>0.000422</td>\n",
+       "      <td>0.05653</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>0.057942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3961</th>\n",
+       "      <td>K4AC16_spike_in__005_from_ZNC04S_label_CRC_rep...</td>\n",
+       "      <td>7.691860</td>\n",
+       "      <td>35529</td>\n",
+       "      <td>17543</td>\n",
+       "      <td>0.000216</td>\n",
+       "      <td>0.000438</td>\n",
+       "      <td>0.02653</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.045285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3962</th>\n",
+       "      <td>K2071_spike_in__0001_from_ZNC03S_label_CRC_rep...</td>\n",
+       "      <td>8.781977</td>\n",
+       "      <td>40683</td>\n",
+       "      <td>21186</td>\n",
+       "      <td>0.000216</td>\n",
+       "      <td>0.000415</td>\n",
+       "      <td>0.02762</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.045744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3963</th>\n",
+       "      <td>K4AC10_spike_in__001_from_ZNB03SR2_label_Breas...</td>\n",
+       "      <td>15.970760</td>\n",
+       "      <td>46916</td>\n",
+       "      <td>23659</td>\n",
+       "      <td>0.000340</td>\n",
+       "      <td>0.000675</td>\n",
+       "      <td>0.08085</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.068204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3964</th>\n",
+       "      <td>KAAK49_spike_in__005_from_ZNL09S_label_Lung_re...</td>\n",
+       "      <td>9.073746</td>\n",
+       "      <td>37459</td>\n",
+       "      <td>19667</td>\n",
+       "      <td>0.000242</td>\n",
+       "      <td>0.000461</td>\n",
+       "      <td>0.01833</td>\n",
+       "      <td>Lung</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.041825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3965</th>\n",
+       "      <td>CRCC5_spike_in__005_from_ZMG048S_label_Gastric...</td>\n",
+       "      <td>15.615160</td>\n",
+       "      <td>66427</td>\n",
+       "      <td>34045</td>\n",
+       "      <td>0.000235</td>\n",
+       "      <td>0.000459</td>\n",
+       "      <td>0.03252</td>\n",
+       "      <td>Gastric</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.047812</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3965 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               SampleID  num_candi_reads  \\\n",
+       "0     KZAZ52_spike_in__005_from_ZNC05S_label_CRC_rep...         3.232628   \n",
+       "1     KACE35_spike_in__005_from_ZNB06SR3_label_Breas...         4.220238   \n",
+       "2     K2AA15_spike_in__0005_from_ZNC03S_label_CRC_re...         6.283626   \n",
+       "3     K0AC37_spike_in__0001_from_ZNL08S_label_Lung_r...         4.672566   \n",
+       "4     LBGS087_spike_in__01_from_ZNL15S_label_Lung_re...        15.511696   \n",
+       "...                                                 ...              ...   \n",
+       "3961  K4AC16_spike_in__005_from_ZNC04S_label_CRC_rep...         7.691860   \n",
+       "3962  K2071_spike_in__0001_from_ZNC03S_label_CRC_rep...         8.781977   \n",
+       "3963  K4AC10_spike_in__001_from_ZNB03SR2_label_Breas...        15.970760   \n",
+       "3964  KAAK49_spike_in__005_from_ZNL09S_label_Lung_re...         9.073746   \n",
+       "3965  CRCC5_spike_in__005_from_ZMG048S_label_Gastric...        15.615160   \n",
+       "\n",
+       "      raw_count  in_read_count  ratio_raw  ratio_in_reads  ichorCNA    Label  \\\n",
+       "0         15440           7262   0.000209        0.000445   0.04019      CRC   \n",
+       "1         20069           9720   0.000210        0.000434   0.04465   Breast   \n",
+       "2         29715          15085   0.000211        0.000417   0.03432      CRC   \n",
+       "3         19961          10139   0.000234        0.000461   0.04623     Lung   \n",
+       "4         70788          36730   0.000219        0.000422   0.05653     Lung   \n",
+       "...         ...            ...        ...             ...       ...      ...   \n",
+       "3961      35529          17543   0.000216        0.000438   0.02653      CRC   \n",
+       "3962      40683          21186   0.000216        0.000415   0.02762      CRC   \n",
+       "3963      46916          23659   0.000340        0.000675   0.08085   Breast   \n",
+       "3964      37459          19667   0.000242        0.000461   0.01833     Lung   \n",
+       "3965      66427          34045   0.000235        0.000459   0.03252  Gastric   \n",
+       "\n",
+       "      spike_in_ratio  predicted_TF  \n",
+       "0              0.050      0.051048  \n",
+       "1              0.050      0.052930  \n",
+       "2              0.005      0.048571  \n",
+       "3              0.001      0.053596  \n",
+       "4              0.100      0.057942  \n",
+       "...              ...           ...  \n",
+       "3961           0.050      0.045285  \n",
+       "3962           0.001      0.045744  \n",
+       "3963           0.010      0.068204  \n",
+       "3964           0.050      0.041825  \n",
+       "3965           0.050      0.047812  \n",
+       "\n",
+       "[3965 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candidf"
    ]
   }
  ],
