--- a/PANCANCER08_spike_in_TF_prediction.ipynb
+++ b/PANCANCER08_spike_in_TF_prediction.ipynb
@@ -78,15 +78,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "candidf.groupby(\"spike_in_ratio\")[\"SampleID\"].count()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -144,6 +135,41 @@
     "        candidf[\"predicted_TF\"] = all_models[i].predict(inputdf.to_numpy())\n",
     "        candidf.to_excel(os.path.join(path_to_08_output, f\"Prediction_{selected_candi_features}_model_{i}_spike_in_data.xlsx\"), index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "spike_in_ratio\n",
+       "0.001    900\n",
+       "0.005    900\n",
+       "0.010    900\n",
+       "0.050    900\n",
+       "0.100    881\n",
+       "0.500    384\n",
+       "0.800     90\n",
+       "Name: SampleID, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candidf.groupby(\"spike_in_ratio\")[\"SampleID\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
